<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_toolbox</name>
  <version>1.0.0</version>
  <description>ROS 2 Toolbox</description>
  <maintainer email="czechjakub@icloud.com">Jakub Czech</maintainer>
  <license>MIT</license>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>plotjuggler-ros</exec_depend>
  <exec_depend>rqt</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
